# eXViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  eslint.config.ci.mjs  eslint.config.mjs  example.env  forge.config.ts  package-lock.json  package.json  redeploy-electron-dev.ts  tsconfig.json
.github/workflows/: build.yml
Application/: CMakeLists.txt
Application/Include/: AppWindow.hxx
Application/Source/: AppWindow.cxx  Main.cxx
assets/: icon.icns
entitlements/: Default.plist  Helper.plist  Plugin.plist
patches/: node-signalr+3.0.0-alpha.1.patch  shaka-player+4.3.6.patch  shaka-player+4.3.7.patch  shaka-player+4.7.1.patch  shaka-player+4.7.11.patch  shaka-player+4.7.12.patch  shaka-player+4.7.13.patch  shaka-player+4.8.1.patch
scripts/: redeploy-electron-dev.ts  vmp-sign-dev.ts
src/: Client.ts  Index.ts  Type.ts  Utils.ts  client.ts  global.d.ts  index.ts  type.ts  utils.ts
src/MainWindow/: Global.d.ts  Index.d.ts  Index.html  Preload.ts  Renderer.ts  global.d.ts  index.html  preload.ts  renderer.ts
src/MainWindow/React/: App.css  App.tsx  CustomBootstrap.scss  Global.d.ts  Hook.ts  Index.css  Index.tsx  Store.ts  Store.tsx  Type.ts
src/MainWindow/react/: index.tsx
src/Player/: Global.d.ts  Index.d.ts  Index.html  Preload.ts  Renderer.ts
src/Player/React/: App.module.scss  App.tsx  Hook.ts  Index.css  Index.scss  Index.tsx  Store.ts  Store.tsx
src/main_window/: global.d.ts  index.html  preload.ts  renderer.ts
src/player/: global.d.ts  preload.ts
webpack/: main.config.ts  plugins.ts  renderer.config.ts  rules.ts
(+113 files in other folders)
